# rocm-kpack

./: .clang-format  .env  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
docs/: kpack-build-integration.md  multi_arch_packaging_with_kpack.md  runtime_api.md  tutorial_split_artifacts.md
examples/: packaging-config-example.json
examples/canonical_hip_example/: CMakeLists.txt  README.md  client.cpp  standalone.hip  vector_add.hip  vector_lib.h  vector_lib.hip
python/rocm_kpack/: artifact_collector.py  artifact_combiner.py  artifact_scanner.py  artifact_splitter.py  artifact_utils.py  binutils.py  ccob_parser.py  compression.py  database_handlers.py  elf_fat_device_neutralizer.py  elf_modify_load.py  elf_offload_kpacker.py  elf_zero_pages.py  kpack.py  manifest_merger.py  packaging_config.py  packing_visitor.py  parallel.py
python/rocm_kpack/tools/: bulk_unbundle.py  kpack_binary.py  kpack_tool.py  neutralize_binary.py  pack_tree.py  recombine_artifacts.py  split_artifacts.py  verify_artifacts.py
runtime/: CMakeLists.txt
runtime/include/rocm_kpack/: kpack.h  kpack_export.h  kpack_types.h
runtime/src/: archive.cpp  compression.cpp  kpack.cpp  kpack_internal.h  loader.cpp  path_resolution.cpp  toc_parser.cpp
runtime/tests/: CMakeLists.txt  generate_test_data.py  test_archive_integration.cpp  test_kpack_api.cpp  test_loader_api.cpp  test_utils.h  test_utils_test.cpp
runtime/tests/test_assets/: test_noop.kpack  test_zstd.kpack
test_assets/bundled_binaries/linux/cov5/: MANIFEST.txt
test_assets/ccob/: ccob_gfx942_sample1.co  ccob_gfx942_sample2.co
test_generation/: README.md  build_test_bundles.py  host_only.cpp  simple_kernel.hip
tests/: conftest.py  test_artifact_scanner.py  test_artifact_splitter_integration.py  test_artifact_utils.py  test_binutils.py  test_bundled_assets.py  test_ccob_parser.py  test_database_handlers.py  test_elf_fat_device_neutralizer.py  test_elf_offload_kpacker.py  test_foo.py  test_kpack.py  test_packaging_config.py  test_packing_visitor.py  test_parallel.py  test_recombine_integration.py  test_unbundling_visitor.py
tests/elf_modify_load/: README.md  __init__.py  test_elf_modify_load.py  test_mapped_section.c  test_phdr_overflow.py  test_zero_page_aligned.c  test_zero_page_both_unaligned.c  test_zero_page_unaligned_size.c  test_zero_page_unaligned_start.c
tests/elf_zero_pages/: README.md  test_elf_zero_pages.py  test_zero_page_unaligned_size.c  test_zero_page_unaligned_start.c
